# Operating-Systems-2018

./: README.md  rootfs.tar
infos-user.git/refs/heads/: master
infos.git/objects/pack/: pack-0c0089d8535d30ba4f7d889d4bd6bea94152a810.idx  pack-0c0089d8535d30ba4f7d889d4bd6bea94152a810.pack  pack-648791a67cbf176a1f90292a64940babd6b10b1f.idx  pack-648791a67cbf176a1f90292a64940babd6b10b1f.pack  pack-8260ada831292a019d7b7e82be9887b50760861c.idx  pack-8260ada831292a019d7b7e82be9887b50760861c.pack  pack-bab7e159a2d25b87823a7b3643a01bdd5d6686d0.idx  pack-bab7e159a2d25b87823a7b3643a01bdd5d6686d0.pack
infos.git/refs/heads/: master
os-coursework/: CMakeLists.txt  reset-repo.sh
os-coursework/coursework/: CMakeLists.txt  buddy.cpp  buddy.d  sched-rr.cpp  sched-rr.d  tarfs.cpp  tarfs.d
qemu/qemu-2.7.0/roms/seabios/: config.mak
qemu/qemu-2.7.0/roms/vgabios/: config.mak
