cmake_minimum_required(VERSION 3.9)
project(os_coursework)

set(CMAKE_CXX_STANDARD 11)

add_executable(os_coursework
        coursework/buddy.cpp
        coursework/sched-rr.cpp
        coursework/tarfs.cpp
        coursework/tarfs.h
        coursework-skeletons/buddy.cpp
        coursework-skeletons/sched-rr.cpp
        coursework-skeletons/tarfs.cpp
        coursework-skeletons/tarfs.h
        infos/arch/x86/acpi/acpi.cpp
        infos/arch/x86/assert.cpp
        infos/arch/x86/cpu.cpp
        infos/arch/x86/devices.cpp
        infos/arch/x86/dt.cpp
        infos/arch/x86/early-screen.cpp
        infos/arch/x86/irq.cpp
        infos/arch/x86/mm.cpp
        infos/arch/x86/modules.cpp
        infos/arch/x86/platform.cpp
        infos/arch/x86/qemu-stream.cpp
        infos/arch/x86/sched.cpp
        infos/arch/x86/start.cpp
        infos/arch/x86/syscall.cpp
        infos/arch/x86/x86-arch.cpp
        infos/drivers/ata/ata-controller.cpp
        infos/drivers/ata/ata-device.cpp
        infos/drivers/block/block-device.cpp
        infos/drivers/console/console.cpp
        infos/drivers/console/physical-console.cpp
        infos/drivers/console/virtual-console.cpp
        infos/drivers/input/keyboard.cpp
        infos/drivers/irq/ioapic.cpp
        infos/drivers/irq/lapic.cpp
        infos/drivers/pci/bridge.cpp
        infos/drivers/pci/display.cpp
        infos/drivers/pci/network.cpp
        infos/drivers/pci/pci-bus.cpp
        infos/drivers/pci/pci-device.cpp
        infos/drivers/pci/storage.cpp
        infos/drivers/terminal/terminal.cpp
        infos/drivers/timer/lapic-timer.cpp
        infos/drivers/timer/pit.cpp
        infos/drivers/timer/timer.cpp
        infos/drivers/video/vga-console.cpp
        infos/drivers/controller.cpp
        infos/drivers/device.cpp
        infos/fs/exec/elf-loader.cpp
        infos/fs/block-based-filesystem.cpp
        infos/fs/devfs.cpp
        infos/fs/directory.cpp
        infos/fs/filesystem.cpp
        infos/fs/internal-driver.cpp
        infos/fs/rootfs.cpp
        infos/fs/tmpfs.cpp
        infos/fs/vfat.cpp
        infos/fs/vfs-node.cpp
        infos/fs/vfs.cpp
        infos/include/arch/x86/acpi/acpi.h
        infos/include/arch/x86/context.h
        infos/include/arch/x86/cpu.h
        infos/include/arch/x86/cpuid.h
        infos/include/arch/x86/dt.h
        infos/include/arch/x86/early-screen.h
        infos/include/arch/x86/init.h
        infos/include/arch/x86/irq-entry-points.h
        infos/include/arch/x86/irq.h
        infos/include/arch/x86/msr.h
        infos/include/arch/x86/multiboot.h
        infos/include/arch/x86/pio.h
        infos/include/arch/x86/qemu-stream.h
        infos/include/arch/x86/x86-arch.h
        infos/include/arch/arch.h
        infos/include/arch/interface.h
        infos/include/infos/drivers/ata/ata-controller.h
        infos/include/infos/drivers/ata/ata-device.h
        infos/include/infos/drivers/block/block-device.h
        infos/include/infos/drivers/console/console.h
        infos/include/infos/drivers/console/physical-console.h
        infos/include/infos/drivers/console/virtual-console.h
        infos/include/infos/drivers/input/keyboard.h
        infos/include/infos/drivers/irq/ioapic.h
        infos/include/infos/drivers/irq/lapic.h
        infos/include/infos/drivers/pci/bridge.h
        infos/include/infos/drivers/pci/display.h
        infos/include/infos/drivers/pci/network.h
        infos/include/infos/drivers/pci/pci-bus.h
        infos/include/infos/drivers/pci/pci-device.h
        infos/include/infos/drivers/pci/storage.h
        infos/include/infos/drivers/terminal/terminal.h
        infos/include/infos/drivers/timer/lapic-timer.h
        infos/include/infos/drivers/timer/pit.h
        infos/include/infos/drivers/timer/timer.h
        infos/include/infos/drivers/video/vga-console.h
        infos/include/infos/drivers/controller.h
        infos/include/infos/drivers/device.h
        infos/include/infos/fs/exec/elf-loader.h
        infos/include/infos/fs/exec/loader.h
        infos/include/infos/fs/block-based-filesystem.h
        infos/include/infos/fs/devfs.h
        infos/include/infos/fs/directory.h
        infos/include/infos/fs/file.h
        infos/include/infos/fs/filesystem.h
        infos/include/infos/fs/fs-node.h
        infos/include/infos/fs/internal-driver.h
        infos/include/infos/fs/pfs-node.h
        infos/include/infos/fs/rootfs.h
        infos/include/infos/fs/tmpfs.h
        infos/include/infos/fs/vfat.h
        infos/include/infos/fs/vfs-node.h
        infos/include/infos/fs/vfs.h
        infos/include/infos/io/stream.h
        infos/include/infos/kernel/cpu.h
        infos/include/infos/kernel/device-manager.h
        infos/include/infos/kernel/irq.h
        infos/include/infos/kernel/kernel.h
        infos/include/infos/kernel/log.h
        infos/include/infos/kernel/module.h
        infos/include/infos/kernel/object.h
        infos/include/infos/kernel/om.h
        infos/include/infos/kernel/process.h
        infos/include/infos/kernel/sched-entity.h
        infos/include/infos/kernel/sched.h
        infos/include/infos/kernel/subsystem.h
        infos/include/infos/kernel/syscall.h
        infos/include/infos/kernel/thread-context.h
        infos/include/infos/kernel/thread.h
        infos/include/infos/mm/allocator.h
        infos/include/infos/mm/mm.h
        infos/include/infos/mm/object-allocator.h
        infos/include/infos/mm/page-allocator.h
        infos/include/infos/mm/vma.h
        infos/include/infos/util/allocator.h
        infos/include/infos/util/cmdline.h
        infos/include/infos/util/enumerable.h
        infos/include/infos/util/event.h
        infos/include/infos/util/generator.h
        infos/include/infos/util/list.h
        infos/include/infos/util/lock.h
        infos/include/infos/util/map.h
        infos/include/infos/util/math.h
        infos/include/infos/util/printf.h
        infos/include/infos/util/queue.h
        infos/include/infos/util/ratio.h
        infos/include/infos/util/rtti.h
        infos/include/infos/util/string.h
        infos/include/infos/util/support.h
        infos/include/infos/util/time.h
        infos/include/infos/assert.h
        infos/include/infos/define.h
        infos/kernel/device-manager.cpp
        infos/kernel/irq.cpp
        infos/kernel/kernel.cpp
        infos/kernel/log.cpp
        infos/kernel/module.cpp
        infos/kernel/object.cpp
        infos/kernel/om.cpp
        infos/kernel/process.cpp
        infos/kernel/sched-cfs.cpp
        infos/kernel/sched.cpp
        infos/kernel/syscall.cpp
        infos/kernel/thread.cpp
        infos/mm/dlmalloc.cpp
        infos/mm/mm.cpp
        infos/mm/object-allocator.cpp
        infos/mm/page-allocator.cpp
        infos/mm/simple-page-alloc.cpp
        infos/mm/vma.cpp
        infos/util/cmdline.cpp
        infos/util/event.cpp
        infos/util/lock.cpp
        infos/util/printf.cpp
        infos/util/string.cpp
        infos/util/support.cpp
        infos-user/inc/infos.h
        infos-user/lib/exec.cpp
        infos-user/lib/init.cpp
        infos-user/lib/io.cpp
        infos-user/lib/printf.cpp
        infos-user/lib/string.cpp
        infos-user/lib/syscall.cpp
        infos-user/src/cat/main.cpp
        infos-user/src/init/main.cpp
        infos-user/src/ls/main.cpp
        infos-user/src/sched-test1/main.cpp
        infos-user/src/sched-test2/main.cpp
        infos-user/src/shell/shell.cpp)
